# Enhanced-Active-Lane-Consolidation

./: .gitignore  .gitmodules  ALC.cpp  README.md
Transformation Pass/Vectorizer Pass/: ALC_Vectorizer.cpp  CMakeLists.txt  permuted.s  test_O0.ll  test_O1.ll  vectorizer.cpp
Transformation Pass/Vectorizer Pass/IntrinsicCallGenerator/: CMakeLists.txt  IntrinsicCallGenerator.cpp  IntrinsicCallGenerator.h
Transformation Pass/Vectorizer Pass/SVE_ALC/: CMakeLists.txt  SVE_ALC.cpp  SVE_ALC.h
Transformation Pass/Vectorizer Pass/SVE_Permute/: CMakeLists.txt  SVE_Permute.cpp  SVE_Permute.h
Transformation Pass/Vectorizer Pass/SVE_Vectorizer/: CMakeLists.txt  SVE_Vectorizer.cpp  SVE_Vectorizer.h
Transformation Pass/Vectorizer Pass/Unroller/: CMakeLists.txt  Makefile  Unroller.cpp  Unroller.h
Transformation Pass/Vectorizer Pass/test/: ALC_Applied.ll  ALC_Applied.s  cfg.foo.dot  cfg.main.dot  compiled_with_O3.ll  compiled_with_O3.s  log.txt  permuted.ll  permuted.s  results.txt  run_pass.sh  test-vectorized.ll  test-vectorized.s  test.bc  test.c  test.ll  test_unrolled.ll  unrolled.ll  vectorized.ll  vectorized.s
Transformation-Pass/Vectorizer-Pass/: ALC_Vectorizer.cpp  CMakeLists.txt
Transformation-Pass/Vectorizer-Pass/ALC_Analysis/: ALC_Analysis.cpp  ALC_Analysis.h  CMakeLists.txt
Transformation-Pass/Vectorizer-Pass/IntrinsicCallGenerator/: CMakeLists.txt  IntrinsicCallGenerator.cpp  IntrinsicCallGenerator.h
Transformation-Pass/Vectorizer-Pass/Iterative_ALC/: CMakeLists.txt  Iterative_ALC.cpp  Iterative_ALC.h
Transformation-Pass/Vectorizer-Pass/SVE-ALC/: CMakeLists.txt  SVE_ALC.cpp  SVE_ALC.h
Transformation-Pass/Vectorizer-Pass/SVE-Vectorizer/: CMakeLists.txt  SVE_Vectorizer.cpp  SVE_Vectorizer.h
Transformation-Pass/Vectorizer-Pass/Simple_ALC/: CMakeLists.txt  Simple_ALC.cpp  Simple_ALC.h
Transformation-Pass/Vectorizer-Pass/Unroller/: CMakeLists.txt  Unroller.cpp  Unroller.h
Transformation-Pass/Vectorizer-Pass/test/: .ll  ALC.ll  ALC_Applied.ll  ALC_Applied.s  ALC_O3.ll  Kernel.c  Kernel.ll  Kernel_O3.ll  LBM_ALC.ll  LBM_ALC_O3.ll  _O3.ll  a.out  alc.ll  alc.x  alc_O3.ll  alc_applied.ll  alc_applied.x  alc_applied_O3.ll  alc_applied_O3.s  alc_data_permutation.ll  alc_data_permutation_O3.ll  alc_data_permute.ll  alc_data_permute_2%.ll  alc_data_permute_2%_O3.ll  alc_data_permute_O3.ll  alc_full.ll  alc_full_O3.ll  alc_iterative.x  alc_iterative_handwritten.ll  alc_itr-10%.x  alc_itr-20%.x  alc_itr-50%.x  alc_itr-66%.x  alc_itr-75%.x  alc_itr.ll  alc_itr_10%.x  alc_itr_2%.ll  alc_itr_2%_O3.ll  alc_itr_20%.x  alc_itr_25%.x  (+85 more)
Transformation-Pass/Vectorizer-Pass/test/Gem5 results/: alc_itr-33%.x  alc_itr-80%.x  alc_simple-33%.x  alc_simple-50%.x  alc_simple-66%.x
Transformation-Pass/Vectorizer-Pass/test/benchmarks/LBM/: main.c.bc.ll  scalar_lbm-before.ll
Transformation-Pass/Vectorizer-Pass/test/benchmarks/Lonestar_eda/: BitVectorPool.ll  CutPool.ll  FunctionUtil.ll  LookupTableParser.ll  NPNManager.ll  PreCompGraphManager.ll  PriorityCutPool.ll  bitmap_test.ll  dist.ll  (+12 more)
Transformation-Pass/Vectorizer-Pass/test/jpeg/: jidctint.c
Transformation-Pass/Vectorizer-Pass/test/ookami_results/: .~lock.cycles.csv#  .~lock.program_cycles.csv#  FPU.csv  alc_itr_O3.ll  branch-misses.csv  branch.csv  cache-misses.csv  cache.csv  cycle.csv  cycles.csv  draw_figures.py  draw_figures_PAPI.py  instruction.csv  instructions.csv  instructions_executed.csv  memory_stall.csv  no_instructions.csv  program_cycles.csv  resource_stall.csv
Transformation-Pass/Vectorizer-Pass/test/s253/: alc_iterative_handwritten.ll  alc_simple_handwritten.ll  alc_simple_handwritten_O3.ll  dummy.c  tmp_no_scatter_store.s  tsvc-functions.c
Transformation-Pass/Vectorizer-Pass/test/simulation_results/: alc_applied-report-1.txt  alc_applied-report-10.txt  alc_applied-report-16.txt  alc_applied-report-2.txt  alc_applied-report-3.txt  alc_applied-report-4.txt  alc_applied-report-5.txt  alc_applied-report-8.txt  alc_iterative-1.txt  alc_iterative-10.txt  alc_iterative-16.txt  alc_iterative-2.txt  alc_iterative-3.txt  alc_iterative-4.txt  alc_iterative-5.txt  alc_iterative-8.txt  alc_itr-10%-1.txt  alc_itr-10%-16.txt  alc_itr-10%-2.txt  alc_itr-10%-4.txt  alc_itr-10%-8.txt  alc_itr-20%-1.txt  alc_itr-20%-16.txt  alc_itr-20%-2.txt  alc_itr-20%-4.txt  alc_itr-20%-8.txt  alc_itr-25%-1.txt  alc_itr-25%-16.txt  alc_itr-25%-2.txt  alc_itr-25%-4.txt  alc_itr-25%-8.txt  alc_itr-33%-1.txt  alc_itr-33%-16.txt  alc_itr-33%-2.txt  alc_itr-33%-4.txt  alc_itr-33%-8.txt  alc_itr-50%-1.txt  alc_itr-50%-16.txt  alc_itr-50%-2.txt  alc_itr-50%-4.txt  (+241 more)
Transformation-Pass/Vectorizer-Pass/test/spec/: accelerate.c.bc.ll  alone_decoder.c.bc.ll  alone_encoder.c.bc.ll  analyze.c.bc.ll  animate.c.bc.ll  annotate.c.bc.ll  arm.c.bc.ll  armthumb.c.bc.ll  artifact.c.bc.ll  attribute.c.bc.ll  auto_decoder.c.bc.ll  blob.c.bc.ll  block_buffer_decoder.c.bc.ll  block_buffer_encoder.c.bc.ll  block_decoder.c.bc.ll  block_encoder.c.bc.ll  block_header_decoder.c.bc.ll  block_header_encoder.c.bc.ll  block_util.c.bc.ll  cabac.c.bc.ll  cache-view.c.bc.ll  cache.c.bc.ll  cavlc.c.bc.ll  channel.c.bc.ll  check.c.bc.ll  cipher.c.bc.ll  client.c.bc.ll  coder.c.bc.ll  color.c.bc.ll  colormap.c.bc.ll  colorspace.c.bc.ll  common.c.bc.ll  compare.c.bc.ll  composite.c.bc.ll  compress.c.bc.ll  configure.c.bc.ll  constitute.c.bc.ll  convert.c.bc.ll  cpu.c.bc.ll  crc32_fast.c.bc.ll  (+172 more)
Transformation-Pass/Vectorizer-Pass/test/spec codes/: binpos.ll  chirvol.ll  compile_SPEC_to_IR.sh  database.ll  errormsg.ll  memutil.ll  molio.ll  molutil.ll  nblist.ll  prm.ll  rand2.ll  reslib.ll  select_atoms.ll  traceback.ll
Transformation-Pass/Vectorizer-Pass/test/test.c results/: alc_itr-25%.x  alc_itr-90%.x  alc_simple-10%.x  alc_simple-20%.x  alc_simple-75%.x
Transformation-Pass/Vectorizer-Pass/test/test_handWritten/: test_alc_simple.ll
Transformation-Pass/Vectorizer-Pass/test/test_handWritten_new code/: alc_simple_O3.ll  test_alc_simple.ll
Transformation-Pass/Vectorizer-Pass/test/tsvc/: Analysis result.txt  armclang.log.txt  common.h  log.gcc.txt  s253.c  tsvc.c  tsvc.x
(+1249 files in other folders)
